tests/ui/transmutability/references.current.stderr
error[E0277]: `&Unit` cannot be safely transmuted into `&Unit` in the defining scope of `assert::Context`
  --> $DIR/references.rs:29:52
   |
LL |     assert::is_maybe_transmutable::<&'static Unit, &'static Unit>();
   |                                                    ^^^^^^^^^^^^^ `&Unit` does not have a well-specified layout
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/references.rs:16:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
